results/SVCOMP/specgen/log-ExSymExeLCMP-2024_03_07_00_00_32.txt
class Main {
    //@ requires Integer.MIN_VALUE <= x && x <= Integer.MAX_VALUE && Integer.MIN_VALUE <= y && y <= Integer.MAX_VALUE;
    //@ ensures \result ==> x <= 0;
    //@ ensures !\result ==> x > 0;
    public static boolean f(long x) {
        Main inst = new Main();
        return inst.test(x, 5);
    }

    //@ requires Integer.MIN_VALUE <= x && x <= Integer.MAX_VALUE && Integer.MIN_VALUE <= y && y <= Integer.MAX_VALUE;
    //@ ensures \result ==> x <= 0;
    //@ ensures !\result ==> x > 0;
    public boolean test(long x, long y) {

        long res = x;
        if (res + 1 > res + 2) {
            return false;
        } else {
            System.out.println("x <=0");
            return true;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeLCMP.java:2: error: cannot find symbol
    //@ requires Integer.MIN_VALUE <= x && x <= Integer.MAX_VALUE && Integer.MIN_VALUE <= y && y <= Integer.MAX_VALUE;
                                                                                          ^
  symbol:   variable y
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeLCMP.java:2: error: cannot find symbol
    //@ requires Integer.MIN_VALUE <= x && x <= Integer.MAX_VALUE && Integer.MIN_VALUE <= y && y <= Integer.MAX_VALUE;
                                                                                               ^
  symbol:   variable y
  location: class Main
2 errors

class Main {
    //@ requires Integer.MIN_VALUE <= x && x <= Integer.MAX_VALUE && Integer.MIN_VALUE <= y && y <= Integer.MAX_VALUE;
    //@ ensures \result ==> x <= 0;
    //@ ensures !\result ==> x > 0;
    public static boolean f(long x) {
        Main inst = new Main();
        return inst.test(x, 5);
    }

    //@ requires Integer.MIN_VALUE <= x && x <= Integer.MAX_VALUE && Integer.MIN_VALUE <= y && y <= Integer.MAX_VALUE;
    //@ ensures \result ==> x <= 0;
    //@ ensures !\result ==> x > 0;
    public boolean test(long x, long y) {

        long res = x;
        if (res + 1 > res + 2) {
            return false;
        } else {
            System.out.println("x <=0");
            return true;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeLCMP.java:2: error: cannot find symbol
    //@ requires Integer.MIN_VALUE <= x && x <= Integer.MAX_VALUE && Integer.MIN_VALUE <= y && y <= Integer.MAX_VALUE;
                                                                                          ^
  symbol:   variable y
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeLCMP.java:2: error: cannot find symbol
    //@ requires Integer.MIN_VALUE <= x && x <= Integer.MAX_VALUE && Integer.MIN_VALUE <= y && y <= Integer.MAX_VALUE;
                                                                                               ^
  symbol:   variable y
  location: class Main
2 errors

class Main {
    //@ requires Integer.MIN_VALUE <= x && x <= Integer.MAX_VALUE;
    //@ ensures \result ==> x <= 0;
    //@ ensures !\result ==> x > 0;
    public static boolean f(long x) {
        Main inst = new Main();
        return inst.test(x, 5);
    }

    //@ requires Integer.MIN_VALUE <= x && x <= Integer.MAX_VALUE;
    //@ ensures \result ==> x <= 0;
    //@ ensures !\result ==> x > 0;
    public boolean test(long x, long y) {

        long res = x;
        if (res + 1 > res + 2) {
            return false;
        } else {
            System.out.println("x <=0");
            return true;
        }
    }
}
